# konkon-final

./: pyproject.toml
konkon/: manage.py
konkon/app/: admin.py  enums.py  serializers.py  urls.py
konkon/app/migrations/: 0001_initial.py
konkon/app/models/: __init__.py  abstract.py  dict.py  models.py
konkon/app/views/: __init__.py  dict.py  views.py
konkon/konkon/: asgi.py  env_variables.py  settings.py  urls.py  wsgi.py
